--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -2,6 +2,9 @@ name: POI CICD
 
 env:
   poi_path: apis/poi/**
+  registry: openhackxtl6mwz4acr
+  repository:  devopsoh/api-poi
+  docker_path: apis/poi/web
     
 
 on:
@@ -48,3 +51,20 @@ jobs:
         path-to-lcov: apis/poi/tests/UnitTests/lcov/coverage.info
         base-path: apis/poi
         flag-name: Unit
+  
+  docker_build_and_push:
+    if: github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    needs: build_and_test
+    steps:     
+    - uses: actions/checkout@v2
+    
+    - name: Docker login     
+      run: docker login $registry -u ${{ secrets.ACR_USER }} -p ${{ secrets.ACR_KEY }}
+    
+    - name: Docker build
+      run: docker build -t $registry/$repository:${{github.run_number}} --build-arg build_version=${{github.run_number}} $docker_path
+    
+    - name: Docker Push
+      run: docker push $registry/$repository:${{github.run_number}}  
+
