--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -55,8 +55,8 @@ jobs:
   
   docker_build_and_push:
     runs-on: ubuntu-latest
-    steps:
-      uses: actions/checkout@v2
+    steps:
+    - uses: actions/checkout@v2
       
     - name: Docker login    
       run: docker login $registry -u ${{ secrets.ACR_USER }} -p ${{ secrets.ACR_KEY }}
