--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -55,6 +55,7 @@ jobs:
   
   docker_build_and_push:
     runs-on: ubuntu-latest
+    needs: build_and_test
     steps:
     - uses: actions/checkout@v2
       
