--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -51,14 +51,19 @@ jobs:
         path-to-lcov: apis/poi/tests/UnitTests/lcov/coverage.info
         base-path: apis/poi
         flag-name: Unit
-  
-  
-  docker_build_and_push:
-    runs-on: ubuntu-latest
-    needs: build_and_test
-    steps:
-    - uses: actions/checkout@v2
       
-    - name: Docker login
-      run: docker login $registry -u ${{ secrets.ACR_USER }} -p ${{ secrets.ACR_KEY }}
+  docker_build_and_push:
+    if: github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    needs: [build_and_test]
+    steps:
+      - uses: action/checkout@v2
+        name: Docker login
+        run: docker login $registry -u ${{ secrets.ACR_USER }} -p ${{ secrets.ACR_KEY }}
         
+      - name: Docker build
+        run: docker build -t $registry/$repository:${{github.run_number}} --build-arg build_version=${{github.run_number}} $docker_path
+      
+      - name: Docker push
+        run: docker push $registry/$repository:${{github.run_number}}
+  
