--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -57,7 +57,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build_and_test]
     steps:
-      - uses: action/checkout@v2
+      - uses: actions/checkout@v2
       
       - name: Docker login
         run: docker login $registry -u ${{ secrets.ACR_USER }} -p ${{ secrets.ACR_KEY }}
